[package]
name = "haksul-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
dotenv = "0.15.0"
http = "1.1.0"
lazy_static = "1.4.0"
pingora-core = "0.1.0"
pingora-http = "0.1.0"
pingora-limits = "0.1.0"
pingora-proxy = "0.1.0"
reqwest = "0.11.25"
serde = "1.0.197"
serde_json = "1.0.114"
