[package]
name = "haksul-proxy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
dotenv = "0.15.0"
http = "1.1.0"
jemallocator = { version = "0.5.4", features = ["background_threads"] }
lazy_static = "1.4.0"
pingora = { version = "0.2.0", features = ["proxy", "lb", "cache"] }
pingora-core = "0.2.0"
pingora-http = "0.2.0"
pingora-proxy = "0.2.0"
serde = "1.0.201"
serde_json = "1.0.117"
structopt = { version = "0.3.26", features = ["suggestions"] }
tokio = { version = "1.37.0", features = ["full"] }
